# acgp

./: .gitignore  README.md  example_script.py  requirements.txt  setup.cfg
experiments/: compress_results_job.sh  local_auxilary_computations.py  make_bound_plotting.py  make_llh_plotting.py  make_optimization_plotting.py  make_results_table.py  run_bound_quality_cglb.py  run_bound_quality_ground_truth.py  run_ground_truth_comparison_computations.py  run_hyper_parameter_tuning.py  run_single_array_configuration.py  run_toy_example.py
experiments/bound_quality/: parser.py
experiments/hyperparameter_tuning/: get_results_from_cluster.sh
experiments/hyperparameter_tuning/utils/: abstract_hyper_parameter_tuning_algorithm.py
experiments/tests/baseline/: test_sgpr.py
experiments/tests/cholesky/: test_cholesky_implementations.py
experiments/tests/custom_reverse/: log_marginal.py
experiments/tests/kernel/: test_lazy_evaluator.py
experiments/tests/math/: utility_inequalities.py
experiments/tests/optimization/: test_cglb.py  test_stopped_cholesky.py
experiments/tests/performance_tests/: test_cholesky_backward_pass.py
experiments/utils/: __init__.py  kernel_evaluator.py  registry.py
experiments/utils/data/: load_dataset.py  smooth_functions.py
experiments/utils/execution/: run_cluster.py
experiments/utils/hooks/: record_hook.py
experiments/utils/mem_efficient_kernels/: fdot.py  isotropic_kernel.py
experiments/utils/misc/: distances.py  safe_functions.py
experiments/utils/result_management/: acgp.py  (+3 more)
src/acgp/: bound_computation.py  meta_cholesky.py
(+24 files in other folders)
