[metadata]
name = acgp
version = 0.0.1
author = Simon Bartels, Kristoffer Stensbo-Smidt, Pablo Moreno-Muñoz
author_email = bartels@di.ku.dk
description = Adaptive Cholesky Gaussian Processes
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/SimonBartels/acgp
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU 3 License
    Operating System :: OS Independent

[options]
package_dir =
    =src
packages = find:
python_requires = >=3.6

[options.packages.find]
where=src